--- a/barchart-udt-archon/pom.xml
+++ b/barchart-udt-archon/pom.xml
@@ -17,6 +17,12 @@
 	<version>2.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
+	<modules>
+		<module>../barchart-udt-core</module>
+		<module>../barchart-udt-pack</module>
+		<module>../barchart-udt-pack-bundle</module>
+	</modules>
+
 	<description>Java wrapper around native C++ UDT protocol implementation UDT version: 4.9</description>
 
 	<url>https://github.com/barchart/barchart-udt</url>
@@ -308,21 +314,29 @@
 								</goals>
 								<configuration>
 									<source>
-										//
-										version=project.version;
-										snapshot='-SNAPSHOT';
-										if(version.contains(snapshot)){
-										snapshotVersion=version;
-										releaseVersion=version.replaceAll(snapshot,'');
-										}else{
-										snapshotVersion=version+snapshot;
-										releaseVersion=version;
-										}
-										println('###snapshotVersion='+snapshotVersion);
-										println('###releaseVersion='+releaseVersion);
-										project.properties['snapshotVersion']=snapshotVersion;
-										project.properties['releaseVersion']=releaseVersion;
-										//
+<![CDATA[
+					
+					def snapshot = '-SNAPSHOT'
+					def version  = project.version
+					
+					def releaseVersion
+					def snapshotVersion
+					
+					if( version.contains(snapshot) ){
+						releaseVersion  = version.replaceAll(snapshot,'')
+						snapshotVersion = version
+					}else{
+						releaseVersion  = version
+						snapshotVersion = version + snapshot
+					}
+					
+					println( '### releaseVersion  = ' + releaseVersion )
+					println( '### snapshotVersion = ' + snapshotVersion )
+
+					project.properties[ 'releaseVersion'  ] = releaseVersion
+					project.properties[ 'snapshotVersion' ] = snapshotVersion
+					
+]]>
 									</source>
 								</configuration>
 							</execution>
