--- a/barchart-udt-it/barchart-udt-it-01-bundle/pom.xml
+++ b/barchart-udt-it/barchart-udt-it-01-bundle/pom.xml
@@ -7,13 +7,12 @@
 
 	<parent>
 		<groupId>com.barchart.udt</groupId>
-		<artifactId>barchart-udt-core-it</artifactId>
+		<artifactId>barchart-udt-it</artifactId>
 		<version>0.0.0</version>
 		<relativePath>..</relativePath>
 	</parent>
 
-	<groupId>com.barchart.udt</groupId>
-	<artifactId>barchart-udt-core-it-01-bundle</artifactId>
+	<artifactId>barchart-udt-it-01-bundle</artifactId>
 	<packaging>jar</packaging>
 
 	<description>build bundle prototype for single os/arch</description>
