--- a/barchart-udt-pack-bundle/pom.xml
+++ b/barchart-udt-pack-bundle/pom.xml
@@ -19,9 +19,7 @@
 		<relativePath>../barchart-udt-archon</relativePath>
 	</parent>
 
-	<groupId>com.barchart.udt</groupId>
-	<artifactId>barchart-udt-bundle</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<artifactId>barchart-udt-pack-bundle</artifactId>
 	<packaging>bundle</packaging>
 	
 	<properties>
