--- a/barchart-udt-core/src/main/resources/version.properties
+++ b/barchart-udt-core/src/main/resources/version.properties
@@ -17,8 +17,10 @@
 # TODO read from Yunhong Gu source
 udt.version=4.9.0
 
+#
 # library core name
-barchart.name=${project.artifactId}-${project.version}
+#
+barchart.name=${project.artifactId}-${snapshotVersion}
 
 # library artifact coordinates
 barchart.groupId=${project.groupId}
