--- a/barchart-udt-pack/pom.xml
+++ b/barchart-udt-pack/pom.xml
@@ -42,7 +42,7 @@
 						--update-snapshots \
 						--define skipTests \
 						--activate-profiles \
-						release-versions,package-bundle
+						artifact-version,package-bundle
 					</arguments>
 				</configuration>
 			</plugin>
