--- a/barchart-udt-archon/pom.xml
+++ b/barchart-udt-archon/pom.xml
@@ -296,10 +296,9 @@
 			</build>
 		</profile>
 
-		<!-- build snapshot and release version numbers during various phases of 
-			release plugin -->
+		<!-- release and snapshot versions, regardless of the build phase -->
 		<profile>
-			<id>release-versions</id>
+			<id>artifact-version</id>
 			<build>
 				<plugins>
 					<plugin>
@@ -307,7 +306,7 @@
 						<artifactId>groovy-maven-plugin</artifactId>
 						<executions>
 							<execution>
-								<id>release-versions</id>
+								<id>artifact-version</id>
 								<phase>validate</phase>
 								<goals>
 									<goal>execute</goal>
