--- a/barchart-udt-core/src/main/resources/version.properties
+++ b/barchart-udt-core/src/main/resources/version.properties
@@ -20,7 +20,9 @@ udt.version=4.9.0
 #
 # library core name
 #
-barchart.name=${project.artifactId}-${snapshotVersion}
+# FIXME currently must be a snapshot 
+#
+barchart.name=${project.artifactId}-${project.version}
 
 # library artifact coordinates
 barchart.groupId=${project.groupId}
