--- a/barchart-udt-archon/pom.xml
+++ b/barchart-udt-archon/pom.xml
@@ -17,11 +17,6 @@
 	<version>2.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
-	<modules>
-		<module>../barchart-udt-core</module>
-		<module>../barchart-udt-bundle</module>
-	</modules>
-
 	<description>Java wrapper around native C++ UDT protocol implementation UDT version: 4.9</description>
 
 	<url>https://github.com/barchart/barchart-udt</url>
@@ -416,6 +411,15 @@
 					</plugin>
 				</plugins>
 			</build>
+		</profile>
+
+		<!-- activate modules -->
+		<profile>
+			<id>modules</id>
+			<modules>
+				<module>../barchart-udt-core</module>
+				<module>../barchart-udt-bundle</module>
+			</modules>
 		</profile>
 
 	</profiles>
