--- a/barchart-udt-bundle/pom.xml
+++ b/barchart-udt-bundle/pom.xml
@@ -15,6 +15,13 @@
 	<artifactId>barchart-udt-bundle</artifactId>
 	<packaging>bundle</packaging>
 
+	<scm>
+		<url>https://github.com/barchart/barchart-udt</url>
+		<connection>scm:git:git://github.com/barchart/barchart-udt.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/barchart/barchart-udt.git</developerConnection>
+		<tag>HEAD</tag>
+	</scm>
+
 	<properties>
 
 		<!-- bundle origin artifacts -->
