--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
 
 	<description>eclipse import helper</description>
 
+	<scm>
+		<url>https://github.com/barchart/barchart-udt</url>
+		<connection>scm:git:git://github.com/barchart/barchart-udt.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/barchart/barchart-udt.git</developerConnection>
+		<tag>HEAD</tag>
+	</scm>
+
 	<modules>
 	
 		<!-- base -->
