--- a/barchart-udt-archon/pom.xml
+++ b/barchart-udt-archon/pom.xml
@@ -13,14 +13,14 @@
 
 	<groupId>com.barchart.udt</groupId>
 	<artifactId>barchart-udt-archon</artifactId>
-	<version>2.0.0</version>
+	<version>2.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<scm>
 		<url>https://github.com/barchart/barchart-udt</url>
 		<connection>scm:git:git://github.com/barchart/barchart-udt.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/barchart/barchart-udt.git</developerConnection>
-		<tag>barchart-udt-archon-2.0.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<description>Java wrapper around native C++ UDT protocol implementation UDT version: 4.9</description>
