--- a/barchart-udt-bundle/pom.xml
+++ b/barchart-udt-bundle/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>com.barchart.udt</groupId>
 		<artifactId>barchart-udt-archon</artifactId>
-		<version>2.0.1-SNAPSHOT</version>
+		<version>2.0.0</version>
 		<relativePath>../barchart-udt-archon</relativePath>
 	</parent>
 
@@ -25,7 +25,7 @@
 		<url>https://github.com/barchart/barchart-udt</url>
 		<connection>scm:git:git://github.com/barchart/barchart-udt.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/barchart/barchart-udt.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>barchart-udt-archon-2.0.0</tag>
 	</scm>
 
 	<properties>
