--- a/barchart-udt-archon/pom.xml
+++ b/barchart-udt-archon/pom.xml
@@ -253,8 +253,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<configuration>
-					<pushChanges>false</pushChanges>
-					<localCheckout>true</localCheckout>
+					<!-- <pushChanges>false</pushChanges> -->
+					<!-- <localCheckout>true</localCheckout> -->
 					<arguments><![CDATA[--define skipTests --update-snapshots --activate-profiles artifact-version,release-attach,package-bundle]]></arguments>
 				</configuration>
 			</plugin>
