--- a/barchart-udt-archon/pom.xml
+++ b/barchart-udt-archon/pom.xml
@@ -254,6 +254,7 @@
 				<configuration>
 					<pushChanges>false</pushChanges>
 					<localCheckout>true</localCheckout>
+					<tagNameFormat>barchart-udt-@{project.version}</tagNameFormat>
 					<arguments><![CDATA[--define skipTests --update-snapshots --activate-profiles artifact-version,release-attach,package-bundle]]></arguments>
 				</configuration>
 			</plugin>
