--- a/barchart-udt-demo/pom.xml
+++ b/barchart-udt-demo/pom.xml
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>com.barchart.udt</groupId>
 			<artifactId>barchart-udt-bundle</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
+			<version>2.0.0</version>
 		</dependency>
 
 		<dependency>
