--- a/barchart-udt-it/pom.xml
+++ b/barchart-udt-it/pom.xml
@@ -17,7 +17,7 @@
 	<parent>
 		<groupId>com.barchart.udt</groupId>
 		<artifactId>barchart-udt-archon</artifactId>
-		<version>2.0.0-SNAPSHOT</version>
+		<version>2.0.0</version>
 		<relativePath>../barchart-udt-archon</relativePath>
 	</parent>
 
