--- a/barchart-udt-core/pom.xml
+++ b/barchart-udt-core/pom.xml
@@ -1,13 +1,7 @@
-<!--
-
-    Copyright (C) 2009-2012 Barchart, Inc. <http://www.barchart.com/>
-
-    All rights reserved. Licensed under the OSI BSD License.
-
-    http://www.opensource.org/licenses/bsd-license.php
-
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<!-- Copyright (C) 2009-2012 Barchart, Inc. <http://www.barchart.com/> All 
+	rights reserved. Licensed under the OSI BSD License. http://www.opensource.org/licenses/bsd-license.php -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -21,6 +15,8 @@
 	<artifactId>barchart-udt-core</artifactId>
 	<packaging>bundle</packaging>
 
+	<description>${project.parent.description} [ CORE ] </description>
+
 	<scm>
 		<url>https://github.com/barchart/barchart-udt</url>
 		<connection>scm:git:git://github.com/barchart/barchart-udt.git</connection>
@@ -30,37 +26,41 @@
 
 	<properties>
 
-		<moduleUDT>UDT4</moduleUDT>
-
 		<target>${project.build.directory}</target>
+
+		<!-- c++ source repository -->
+		<moduleUDT>UDT4</moduleUDT>
 		<checkoutUDT>${target}/udt</checkoutUDT>
 		<connectionUDT>scm:cvs:pserver:anonymous:@udt.cvs.sourceforge.net:/cvsroot/udt:${moduleUDT}</connectionUDT>
 
-		<nativeSrc>${basedir}/src/main/c++</nativeSrc>
+		<!-- c++ source layout convention -->
 		<folderJNI>jni</folderJNI>
 		<folderUDT>udt</folderUDT>
+		<nativeSrc>${basedir}/src/main/c++</nativeSrc>
 		<nativeSrcJNI>${nativeSrc}/${folderJNI}</nativeSrcJNI>
 		<nativeSrcUDT>${nativeSrc}/${folderUDT}</nativeSrcUDT>
 
-		<!-- ${label} is set by jenkins matrix build -->
-		<!-- ${jdk} is set by jenkins matrix build -->
+		<!-- note: ${label} and ${jdk} is set by jenkins matrix build -->
 
 	</properties>
 
 	<dependencies>
 
+		<!-- required logging api -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<scope>compile</scope>
 		</dependency>
 
+		<!-- optional logging back end -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- required testing framework -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -72,7 +72,6 @@
 	<build>
 
 		<resources>
-
 			<resource>
 				<directory>src/main/resources</directory>
 				<filtering>true</filtering>
@@ -81,7 +80,6 @@
 					<include>**/*.properties</include>
 				</includes>
 			</resource>
-
 			<resource>
 				<directory>src/main/resources</directory>
 				<filtering>false</filtering>
@@ -93,11 +91,9 @@
 					<include>**/*.sym</include>
 				</includes>
 			</resource>
-
 		</resources>
 
 		<testResources>
-
 			<testResource>
 				<directory>src/test/resources</directory>
 				<filtering>true</filtering>
@@ -106,7 +102,6 @@
 					<include>**/*.properties</include>
 				</includes>
 			</testResource>
-
 			<testResource>
 				<directory>src/nar/resources</directory>
 				<filtering>false</filtering>
@@ -118,11 +113,11 @@
 					<include>**/*.sym</include>
 				</includes>
 			</testResource>
-
 		</testResources>
 
 		<plugins>
 
+			<!-- always attach javadoc -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
@@ -135,7 +130,8 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
+			<!-- always attach sources -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
@@ -155,8 +151,8 @@
 
 	<profiles>
 
+		<!-- get updated c++ sources and apply patches -->
 		<profile>
-			<!-- get updated UDT sources form Yunhong Gu CVS -->
 			<id>checkout</id>
 			<build>
 				<plugins>
@@ -214,7 +210,7 @@
 						<artifactId>maven-patch-plugin</artifactId>
 						<executions>
 							<execution>
-								<id>apply-patches</id>
+								<id>apply-local-patches</id>
 								<phase>process-sources</phase>
 								<goals>
 									<goal>apply</goal>
@@ -233,7 +229,7 @@
 			</build>
 		</profile>
 
-		<!-- integration test sequence -->
+		<!-- run integration test sequence -->
 		<profile>
 			<id>int</id>
 			<build>
@@ -244,7 +240,7 @@
 						<configuration>
 							<streamLogs>true</streamLogs>
 							<projectsDirectory>${basedir}/../.</projectsDirectory>
-							<cloneProjectsTo>${project.build.directory}/int-work</cloneProjectsTo>
+							<cloneProjectsTo>${target}/int-work</cloneProjectsTo>
 							<invokerPropertiesFile>invoker-${label}-${jdk}.properties</invokerPropertiesFile>
 							<pomIncludes>
 								<path>barchart-udt-it/pom.xml</path>
@@ -257,7 +253,7 @@
 						</configuration>
 						<executions>
 							<execution>
-								<id>install-and-run</id>
+								<id>integration-test</id>
 								<phase>integration-test</phase>
 								<goals>
 									<!-- goals for parent maven invocation -->
@@ -271,8 +267,8 @@
 			</build>
 		</profile>
 
+		<!-- attach multi arch/os nar artifacts to the jar project -->
 		<profile>
-			<!-- attach multi arch/os nar artifacts to the jar project -->
 			<id>release-attach</id>
 			<properties>
 				<!-- -->
@@ -281,7 +277,7 @@
 				<attachVersion>${snapshotVersion}</attachVersion>
 				<!-- -->
 				<attachFolder>${target}/nar-all</attachFolder>
-				<attachFileName>${project.groupId}-${project.version}</attachFileName>
+				<attachPrefix>${project.groupId}-${project.version}</attachPrefix>
 			</properties>
 			<build>
 				<plugins>
@@ -304,7 +300,7 @@
 											<version>${attachVersion}</version>
 											<classifier>${lin32}</classifier>
 											<type>nar</type>
-											<destFileName>${attachFileName}-${lin32}.nar</destFileName>
+											<destFileName>${attachPrefix}-${lin32}.nar</destFileName>
 										</artifactItem>
 										<artifactItem>
 											<groupId>${attachGroupId}</groupId>
@@ -312,7 +308,7 @@
 											<version>${attachVersion}</version>
 											<classifier>${lin64}</classifier>
 											<type>nar</type>
-											<destFileName>${attachFileName}-${lin64}.nar</destFileName>
+											<destFileName>${attachPrefix}-${lin64}.nar</destFileName>
 										</artifactItem>
 										<artifactItem>
 											<groupId>${attachGroupId}</groupId>
@@ -320,7 +316,7 @@
 											<version>${attachVersion}</version>
 											<classifier>${mac32}</classifier>
 											<type>nar</type>
-											<destFileName>${attachFileName}-${mac32}.nar</destFileName>
+											<destFileName>${attachPrefix}-${mac32}.nar</destFileName>
 										</artifactItem>
 										<artifactItem>
 											<groupId>${attachGroupId}</groupId>
@@ -328,7 +324,7 @@
 											<version>${attachVersion}</version>
 											<classifier>${mac64}</classifier>
 											<type>nar</type>
-											<destFileName>${attachFileName}-${mac64}.nar</destFileName>
+											<destFileName>${attachPrefix}-${mac64}.nar</destFileName>
 										</artifactItem>
 										<artifactItem>
 											<groupId>${attachGroupId}</groupId>
@@ -336,7 +332,7 @@
 											<version>${attachVersion}</version>
 											<classifier>${win32}</classifier>
 											<type>nar</type>
-											<destFileName>${attachFileName}-${win32}.nar</destFileName>
+											<destFileName>${attachPrefix}-${win32}.nar</destFileName>
 										</artifactItem>
 										<artifactItem>
 											<groupId>${attachGroupId}</groupId>
@@ -344,7 +340,7 @@
 											<version>${attachVersion}</version>
 											<classifier>${win64}</classifier>
 											<type>nar</type>
-											<destFileName>${attachFileName}-${win64}.nar</destFileName>
+											<destFileName>${attachPrefix}-${win64}.nar</destFileName>
 										</artifactItem>
 									</artifactItems>
 									<outputDirectory>${attachFolder}</outputDirectory>
@@ -369,32 +365,32 @@
 								<configuration>
 									<artifacts>
 										<artifact>
-											<file>${attachFolder}/${attachFileName}-${lin32}.nar</file>
+											<file>${attachFolder}/${attachPrefix}-${lin32}.nar</file>
 											<classifier>${lin32}</classifier>
 											<type>nar</type>
 										</artifact>
 										<artifact>
-											<file>${attachFolder}/${attachFileName}-${lin64}.nar</file>
+											<file>${attachFolder}/${attachPrefix}-${lin64}.nar</file>
 											<classifier>${lin64}</classifier>
 											<type>nar</type>
 										</artifact>
 										<artifact>
-											<file>${attachFolder}/${attachFileName}-${mac32}.nar</file>
+											<file>${attachFolder}/${attachPrefix}-${mac32}.nar</file>
 											<classifier>${mac32}</classifier>
 											<type>nar</type>
 										</artifact>
 										<artifact>
-											<file>${attachFolder}/${attachFileName}-${mac64}.nar</file>
+											<file>${attachFolder}/${attachPrefix}-${mac64}.nar</file>
 											<classifier>${mac64}</classifier>
 											<type>nar</type>
 										</artifact>
 										<artifact>
-											<file>${attachFolder}/${attachFileName}-${win32}.nar</file>
+											<file>${attachFolder}/${attachPrefix}-${win32}.nar</file>
 											<classifier>${win32}</classifier>
 											<type>nar</type>
 										</artifact>
 										<artifact>
-											<file>${attachFolder}/${attachFileName}-${win64}.nar</file>
+											<file>${attachFolder}/${attachPrefix}-${win64}.nar</file>
 											<classifier>${win64}</classifier>
 											<type>nar</type>
 										</artifact>
@@ -408,6 +404,7 @@
 			</build>
 		</profile>
 
+		<!-- collect windows 32 dependencies -->
 		<profile>
 			<id>nar_x86-Windows-gpp_dependencies</id>
 			<activation>
@@ -447,6 +444,7 @@
 			</build>
 		</profile>
 
+		<!-- collect windows 64 dependencies -->
 		<profile>
 			<id>nar_amd64-Windows-gpp_dependencies</id>
 			<activation>
@@ -486,8 +484,8 @@
 			</build>
 		</profile>
 
+		<!-- native build configuration -->
 		<profile>
-			<!-- native build configuration -->
 			<id>nar</id>
 			<build>
 				<plugins>
@@ -510,25 +508,34 @@
 								</library>
 							</libraries>
 							<cpp>
+
 								<debug>false</debug>
 								<optimize>none</optimize>
 								<exceptions>true</exceptions>
 								<multiThreaded>true</multiThreaded>
+								
 								<clearDefaultOptions>false</clearDefaultOptions>
+								<clearDefaultDefines>false</clearDefaultDefines>
+								<clearDefaultUndefines>false</clearDefaultUndefines>
 								<options>
 									<!--these options are ignored by overriding profiles -->
 								</options>
-								<clearDefaultDefines>false</clearDefaultDefines>
-								<clearDefaultUndefines>false</clearDefaultUndefines>
+
+								<!-- source *.h and *.cpp root folder -->
 								<sourceDirectory>${nativeSrc}</sourceDirectory>
+
+								<!-- source *.cpp patterns -->
 								<includes>
-									<include>${folderJNI}/*.cpp</include>
-									<include>${folderUDT}/src/*.cpp</include>
+									<pattern>${folderJNI}/*.cpp</pattern>
+									<pattern>${folderUDT}/src/*.cpp</pattern>
 								</includes>
+
+								<!-- source *.h folders -->
 								<includePaths>
-									<includePath>${nativeSrcJNI}</includePath>
-									<includePath>${nativeSrcUDT}/src</includePath>
+									<path>${nativeSrcJNI}</path>
+									<path>${nativeSrcUDT}/src</path>
 								</includePaths>
+
 							</cpp>
 							<java>
 								<include>true</include>
