--- a/barchart-udt-core/pom.xml
+++ b/barchart-udt-core/pom.xml
@@ -607,7 +607,7 @@
 						<version>0.7</version>
 						<executions>
 							<execution>
-								<id>maven-iste</id>
+								<id>maven-site</id>
 								<phase>site</phase>
 								<goals>
 									<goal>site</goal>
@@ -615,6 +615,7 @@
 								<configuration>
 									<merge>false</merge>
 									<server>github</server>
+									<path>site/${project.artifactId}</path>
 									<message>maven site ${project.artifactId}-${project.version}</message>
 								</configuration>
 							</execution>
