--- a/barchart-udt-core/pom.xml
+++ b/barchart-udt-core/pom.xml
@@ -613,7 +613,7 @@
 									<goal>site</goal>
 								</goals>
 								<configuration>
-									<merge>merge</merge>
+									<merge>true</merge>
 									<server>github</server>
 									<path>site/${project.artifactId}</path>
 									<message>maven site ${project.artifactId}-${project.version}</message>
